# UDropCabin

./: CMakeLists.txt  README.md  README.txt  UDropCabin.desktop  UDropCabin.qml  build.sh  com.ubuntu.developer.bobo1993324.udropcabin_account-plugin.provider  com.ubuntu.developer.bobo1993324.udropcabin_uDropCabin.application  com.ubuntu.developer.bobo1993324.udropcabin_uDropCabin.service  dropbox.provider  manifest.json  package.sh  uDropCabin-content.json  uDropCabin.desktop  uDropCabin.json  uDropCabin.qml
app/: CMakeLists.txt  UDropCabin.desktop.in  UDropCabin.qml
app/components/: CMakeLists.txt
app/js/: Utils.js
app/tests/autopilot/: run
app/tests/autopilot/UDropCabin/main/: test_main.py
app/ui/: CMakeLists.txt  FileDetailPage.qml  FilesPage.qml  LoginPage.qml  Makefile
backend/: CMakeLists.txt
backend/modules/UDropCabin/: backend.cpp  backend.h  dropbox.cpp  dropbox.h  dropboxfile.cpp  dropboxfile.h  mytype.cpp  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
components/: Settings.qml
js/: Utils.js
po/: fr.po  udropcabin.pot
src/: CMakeLists.txt  downloadfile.cpp  downloadfile.h  main.cpp  path.cpp  path.h  taskwithprogress.cpp  taskwithprogress.h  uploadfile.cpp  uploadfile.h
src/qml/: CMakeLists.txt  UDropCabin.qml
src/qml/components/: ContentPickerDialog.qml  CreateFolderDialog.qml  CurrentPathHeader.qml  DirView.qml  MetaDb.qml  OverrideConfirmDialog.qml  ProgressDialog.qml  RemoveConfirmDialog.qml  Settings.qml
src/qml/js/: Utils.js
src/qml/ui/: AboutPage.qml  AccountPage.qml  FileDetailPage.qml  FilesPage.qml  LoginPage.qml  SettingsPage.qml
ui/: FileDetailPage.qml  FilesPage.qml  LoginPage.qml  SettingsPage.qml
